--- a/style.css
+++ b/style.css
@@ -96,12 +96,12 @@ tr{
 }
 
 .style-oil{
-    background-color: rgb(255, 153, 0);
+    background-color: #17a2b8;
     color: rgb(255, 255, 255);
 }
 
 .style-payment{
-    background-color: rgb(255, 0, 0);
+    background-color: #17a2b8;
     color: rgb(255, 255, 255);
 }
 
@@ -117,7 +117,7 @@ tr{
  }
 
  .style-servise{
-    background-color: rgb(107, 85, 168);
+    background-color: #17a2b8;
  }
 
 
